# edge-reco

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  biome.json  package.json  pnpm-lock.yaml  poe_tasks.toml  pyproject.toml  pyrightconfig.json  tsconfig.base.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-pages.yml  deploy.yml  frontend.yml  parity-fixtures.yml  security-audit.yml
apps/demo-web/: index.html  package.json  vite.config.ts
apps/demo-web-e2e/: package.json  playwright.config.ts  tsconfig.json
backend/: .dockerignore  .env.example  .gitignore  pyproject.toml  pyrightconfig.json
backend/demo_server/: Dockerfile  README.md  main.py  serve.py
backend/demo_server/tests/: test_demo_api.py
backend/deploy/: Dockerfile  docker-compose.yml  entrypoint.sh
backend/deploy/caddy/: Caddyfile
backend/examples/catalog/: latest
backend/examples/source/: catalog.csv  demo_sessions.jsonl
backend/features/: catalog_sync.feature  recommendations.feature  retrain.feature  session_tracking.feature
backend/scripts/: curate_demo_catalog.py  gen_cooccurrence_fixture.py  gen_demo_sessions.py  gen_embedding_fixture.py  gen_hybrid_fixture.py  gen_search_fixture.py  gen_strategy_fixture.py  rebuild_example_bundle.py
backend/src/edgereco/: __init__.py  cli.py  config.py  republish.py
backend/src/edgereco/api/: __init__.py  app.py  deps.py  models.py  sessions.py
backend/src/edgereco/api/routes/: catalog.py  events.py  health.py  recommend.py  search.py
backend/src/edgereco/catalog/: loader.py  manifest.py  models.py  preprocessor.py  product_image.py  publish.py
backend/src/edgereco/embeddings/: encoder.py  index.py
backend/src/edgereco/reco/: audit.py  cooccurrence.py  pool.py  ranking_config.py  recommend.py  reranker.py  retrain.py  score_receipt.py  scorer.py  signals.py
backend/src/edgereco/search/: __init__.py  vector.py
backend/src/edgereco/telemetry/: __init__.py
backend/tests/: conftest.py
backend/tests/bdd/: conftest.py  test_catalog_sync.py  test_hybrid_search.py  test_product_search.py  test_recommendations.py  test_retrain.py  test_session_tracking.py
backend/tests/e2e/: test_full_loop.py
backend/tests/fixtures/: mini_manifest.json
backend/tests/integration/: conftest.py  test_api_catalog.py  test_api_events.py  test_api_recommend.py  test_api_search.py  test_cli.py  test_cli_audit.py  test_cli_audit_fail_closed.py  test_cli_retrain.py  test_deploy_entrypoint.py  test_events_export.py  test_events_hardening.py  test_events_retune.py  test_republish.py
backend/tests/unit/: test_cli_scalar_as_float.py  test_cli_session_logs.py  test_docker_build_context.py  test_no_explicit_any.py  test_republish.py  test_workflow_security.py
backend/tests/unit/api/: test_encoder_binding.py  test_from_synced.py  test_get_container.py  test_materialize_stale_pruning.py  test_recommend_affinity_pool.py  test_sessions.py
backend/tests/unit/catalog/: test_models.py  test_preprocessor.py  test_preprocessor_price.py  test_product_image.py  test_publish.py  test_scraped_preprocessor.py
backend/tests/unit/embeddings/: test_embeddings_export.py  test_encoder.py
backend/tests/unit/reco/: test_audit.py  test_cooccurrence.py  test_pool.py  test_ranking_config.py  test_recommend.py  test_reranker.py  test_retrain.py  test_score_receipt.py  test_scorer.py  test_signals.py
backend/tests/unit/search/: test_gen_hybrid_fixture_replay.py  test_hybrid.py  test_keyword.py  test_nearest.py  test_vector.py
backend/tests/unit/telemetry/: test_buffer.py
data/: catalog.json
demo/: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml  package-lock.json  package.json
demo/backend/: Dockerfile  main.py  serve.py
demo/docs/: DESIGN.md  PLAN.md  architecture.d2
demo/frontend/: .dockerignore  Dockerfile  biome.json  engine-harness.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
deploy/: docker-compose.yml
deploy/caddy/: Caddyfile
docs/: ARCHITECTURE.md  DEPLOY.md  PRD.md  QUICKSTART.md  SECURITY-PRIVACY.md  TECH_SPEC.md
docs/archive/: MVP_ROADMAP.md  README.md  TECH_SPEC.md
docs/diagrams/: browser-internals.d2  demo-architecture.d2  manifest-lifecycle.d2  mvp-phase-deps.d2  personalization-flywheel.d2  recommendation-request-flow.d2  system-context.d2
docs/legacy/: PRD.md  README.md
docs/plans/: edgereco-python-v1.md
examples/catalog/: latest  manifest.json  products.jsonl
examples/scripts/: preprocess_amazon.py
features/: catalog_sync.feature  hybrid_search.feature  product_search.feature
frontend/: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
frontend/app/: .gitignore  Dockerfile  README.md  biome.json  embed-harness.html  index.html  package.json  playwright.c1.config.ts  playwright.config.ts  playwright.offline.config.ts  tsconfig.app.json  vite.config.ts
scripts/: gen_embedding_fixture.py  gen_hybrid_fixture.py  gen_search_fixture.py  generate_demo_catalog.py
services/api/: pyproject.toml  ruff.toml
services/api/app/: main.py
services/api/app/domain/: catalog.py  types.py
services/api/app/wire/: handlers.py
services/api/tests/: test_domain_catalog.py  test_routes_integration.py  test_wire_handlers.py
services/api/tests/fixtures/: mini_catalog.json
src/edgereco/: cli.py  config.py
tests/: conftest.py
tests/bdd/: conftest.py  test_catalog_sync.py  test_hybrid_search.py  test_product_search.py  test_recommendations.py  test_session_tracking.py
tests/e2e/: test_full_loop.py
tests/fixtures/: mini_catalog.jsonl  mini_manifest.json
tests/integration/: __init__.py  conftest.py  test_api_catalog.py  test_api_events.py  test_api_health.py  test_api_recommend.py  test_api_search.py  test_cli.py  test_cli_coverage.py  test_cli_preprocess_categories.py  test_events_validation.py
(+247 files in other folders)
