[project]
name = "edgereco"
version = "0.4.1"
description = "Edge product discovery engine — hybrid search + session-aware recommendations"
requires-python = ">=3.13"
license = "Apache-2.0"
dependencies = [
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "polars>=1.0",
  "faiss-cpu>=1.9",
  "sentence-transformers>=5.5",
  "rank-bm25>=0.2",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "typer>=0.15",
  "httpx>=0.27",
  "numpy>=2.0",
  "structlog>=24.4",
  "edge-proc[localvec,bundles]",
]

[dependency-groups]
dev = [
  "pytest>=9.0",
  "pytest-cov>=7.1",
  "pytest-bdd>=8.1",
  "mypy>=2.1",
  "ruff>=0.6",
  "poethepoet>=0.30",
]

[tool.uv]
package = true

[tool.uv.sources]
# Local built install (not editable) so the package + its py.typed marker land in
# site-packages where mypy resolves them — mirrors consuming the published edge-proc.
edge-proc = { path = "../../edge-proc" }

[project.scripts]
edgereco = "edgereco.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
pythonpath = ["src"]
bdd_features_base_dir = "features/"
markers = [
  "bdd: BDD acceptance tests",
  "integration: integration tests",
  "e2e: end-to-end tests",
]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
packages = ["edgereco"]
# Source roots for mypy to resolve first-party + non-editable sibling path
# deps (edgeproc, shared_libs_python) WITHOUT installing them. Both siblings use
# a flat layout (package dir at repo root), so the repo root is the source root.
# Local dev uses ../edge-proc and ../shared-libs-python; CI checks the siblings
# out into .deps/ — both are listed so `python -m mypy src` mirrors CI either way.
mypy_path = [
  "src",
  "../../edge-proc",
  "../../shared-libs-python",
  "../.deps/edge-proc",
  "../.deps/shared-libs-python",
]

[[tool.mypy.overrides]]
module = ["faiss"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["rank_bm25"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]
exclude = ["../.deps", "demo_server"]  # sibling checkouts only present in CI; demo_server is an optional example launcher

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "SIM", "UP", "N", "S", "A", "C4", "PT", "RUF"]
ignore = ["S101"]  # allow assert in tests

[tool.coverage.run]
source = ["edgereco"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.poe.tasks]
fmt-check = "ruff format --check ."
lint = "ruff check ."
typecheck = "mypy src"
test = "pytest --cov=edgereco --cov-report=term-missing --cov-fail-under=90"
fmt = "ruff format ."
# `gate` mirrors CI exactly (format-check + lint + typecheck + test-with-coverage).
gate = ["fmt-check", "lint", "typecheck", "test"]

# `demo` is the turnkey, backend-free showcase: it brings up the Caddy edge (signed
# bundle on :8081), starts the Vite SPA (:5173), and opens your browser. Reuses the
# same edge + Vite + trap-teardown sequence as frontend/Makefile:dev, plus a deps
# guard and Vite's `--open`. The demo runs entirely in-browser — no FastAPI here.
[tool.poe.tasks.demo]
help = "Turnkey backend-free demo — edge (:8081) + Vite SPA (:5173), opens your browser."
cwd = "../frontend"            # poe resolves this relative to the project root (backend/)
shell = """
set -e
docker info >/dev/null 2>&1 || { echo 'Docker is not running — start Docker Desktop first.'; exit 1; }
[ -d node_modules ] || pnpm install
echo '>> edge -> http://localhost:8081  (signed bundle the SPA syncs)'
echo '>> app  -> http://localhost:5173  <- opening this in your browser'
docker compose up -d origin edge
# stop (not down) the edge on Ctrl-C — keeps the caddy_data/_config volumes for fast restarts
trap 'docker compose stop origin edge >/dev/null 2>&1' EXIT INT TERM
cd app && pnpm exec vite --open
"""
