[project]
name = "edgereco"
version = "0.12.0"
description = "Local-first product recommendations — hybrid search + session-aware reranking that runs on the shopper's device, zero backend calls after sync"
requires-python = ">=3.13"
license = "MIT"
dependencies = [
  "pydantic>=2.9",
  "pydantic-settings>=2.14.2",  # GHSA-4xgf-cpjx-pc3j fix
  "polars>=1.0",
  "faiss-cpu>=1.9",
  "sentence-transformers>=5.5",
  "rank-bm25>=0.2",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "typer>=0.15",
  "httpx>=0.27",
  "numpy>=2.0",
  "structlog>=24.4",
  "edge-proc[localvec,bundles]",
  # Direct dependency (not just transitive via edge-proc): edgereco imports
  # edgeproc_core.vector_mgmt.core.types in embeddings/index.py, so the
  # import is declared honestly here. Published on PyPI (0.2.1+).
  "edgeproc-core>=0.2.1",
  # Trust kernel: the ranking attestation (reco/score_receipt.py) seals the bundle's
  # scoring weights as a signed Assay composite receipt at publish time. The [assay]
  # extra pulls the scoring face (scikit-learn stack — already transitive here via
  # sentence-transformers). Published on PyPI.
  "avow[assay]>=0.1.0,<0.2",
  # Security floors on transitive deps (pulled via fastapi / edge-proc[bundles] /
  # sentence-transformers); pinned to the CVE-fixed releases. NO suppression — bump
  # where a fix exists. See `poe audit`.
  "starlette>=1.3.1",       # CVE-2026-54283 + CVE-2026-54282 (transitive via fastapi)
  "cryptography>=48.0.1",   # GHSA-537c-gmf6-5ccf (transitive via edge-proc signing)
  "msgpack>=1.2.1",         # GHSA-6v7p-g79w-8964 (transitive)
  "torch>=2.12.1",          # CVE-2025-3000 fix (GHSA-rrmf-rvhw-rf47, PYSEC-2025-194); transitive via sentence-transformers
  "setuptools>=83.0.0",     # PYSEC-2026-3447 (transitive build/runtime dep)
]

[dependency-groups]
dev = [
  "pytest>=9.0",
  "pytest-cov>=7.1",
  "pytest-bdd>=8.1",
  "mypy>=2.1",
  "ruff>=0.6",
  "poethepoet>=0.30",
  "pip-audit>=2.7",
  "xenon>=0.9",
]

[tool.uv]
package = true

[tool.uv.sources]
# Open-source onboarding: clone ONLY this repo and `uv sync`. edgeproc-core now
# installs from PyPI (see the >=0.2.1 floor in [project].dependencies — the
# uv.lock pins the exact release + hashes); only edge-proc still comes from
# public GitHub, pending its own PyPI release.
#
# Pinned by full commit SHA, not by tag. A git tag is mutable: whoever can push to
# that repo can retarget it at different code, and every clone would silently
# resolve a dependency nobody reviewed.
#
# d88af07 (v0.1.5 line, src-identical to 0852319) is the first rev whose own
# [tool.uv.sources] consumes edgeproc-core from PyPI — required here because uv
# honors a git dependency's sources, so an older rev would force the retired
# shared-libs-python git pin back into this lock.
edge-proc = { git = "https://github.com/hseshadr/edge-proc.git", rev = "d88af078c75bd145b28c5bb2cefd15143cec3d21" }

# Co-developing the substrate locally? Clone the siblings next to this repo and
# swap in path sources (uncomment):
#   edge-proc = { path = "../../edge-proc" }
#   edgeproc-core = { path = "../../edgeproc-core" }

[project.scripts]
edgereco = "edgereco.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
pythonpath = ["src"]
bdd_features_base_dir = "features/"
markers = [
  "bdd: BDD acceptance tests",
  "integration: integration tests",
  "e2e: end-to-end tests",
]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
# Ban explicit `Any` in annotations and flag now-dead branches. `strict` alone does
# not reject `dict[str, Any]`; these two close that gap so the type system can't be
# silently defeated. ruff's ANN401 enforces the SAME ban across tests too (see below),
# where mypy does not reach (`typecheck = mypy src`).
disallow_any_explicit = true
warn_unreachable = true
packages = ["edgereco"]
# Source roots for mypy. In the default flow both substrate deps install into
# site-packages (`uv sync`: edgeproc-core from PyPI, edge-proc from its git
# pin), so mypy resolves them there; the sibling entries only serve the
# optional co-developer path-source flow (see [tool.uv.sources]). Both
# siblings use a flat layout (package dir at repo root).
mypy_path = [
  "src",
  "../../edge-proc",
  "../../edgeproc-core",
]

# Pydantic v2 injects `__pydantic_extra__` / `__pydantic_private__: dict[str, Any]`
# into EVERY model, so `disallow_any_explicit` fires on each BaseModel/BaseSettings
# subclass — an unavoidable false positive in an all-Pydantic codebase, not author
# `Any`. Exempt exactly the model-defining modules from THAT one check (there is no
# author-written `Any` in them — verified). ruff's ANN401 still bans literal `Any` in
# these same files, so a real `dict[str, Any]` field here is still rejected.
[[tool.mypy.overrides]]
module = [
  "edgereco.api.models",
  "edgereco.api.routes.events",
  "edgereco.catalog.models",
  "edgereco.catalog.publish",
  "edgereco.config",
  "edgereco.reco.audit",
  "edgereco.reco.cooccurrence",
  "edgereco.reco.ranking_config",
  "edgereco.reco.retrain",
  "edgereco.republish",
]
disallow_any_explicit = false

# The substrate siblings are pinned external deps (GitHub tags), not edge-reco code:
# the no-`Any` ban is ours to enforce on `edgereco.*`, not on vendored source we don't
# own (and which is also all-Pydantic). Exempt them so `mypy src` still follows their
# imports normally.
[[tool.mypy.overrides]]
module = ["edgeproc.*", "edgeproc_core.*"]
disallow_any_explicit = false

[[tool.mypy.overrides]]
module = ["faiss"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["rank_bm25"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]
exclude = ["../.deps", "demo_server"]  # sibling checkouts only present in CI; demo_server is an optional example launcher

[tool.ruff.lint]
# ANN401 bans explicit `Any` in annotations repo-wide (src AND tests). mypy only
# typechecks src, so ANN401 is the lightest way to extend the no-`Any` ban onto
# test code without dragging in the rest of the ANN (missing-annotation) suite.
select = ["E", "F", "W", "I", "B", "SIM", "UP", "N", "S", "A", "C4", "PT", "RUF", "ANN401"]
ignore = ["S101"]  # allow assert in tests

[tool.coverage.run]
source = ["edgereco"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.poe.tasks]
fmt-check = "ruff format --check ."
lint = "ruff check ."
typecheck = "mypy src"
# Complexity gate: A/A/A per house standard §2 — every block, module, and the
# average must hold Radon rank A.
complexity = "xenon --max-absolute A --max-modules A --max-average A src"
# Dependency vulnerability scan (network-dependent — hits the PyPI advisory DB).
# Runs in its own "Security audit" workflow (.github/workflows/security-audit.yml),
# which goes honestly RED on any finding, so the main CI gate stays meaningful for
# code changes. NO suppressions — every finding is fixed by a version floor, not
# silenced. See the security-floor pins in [project].dependencies above.
#
# CVE-2025-3000 (GHSA-rrmf-rvhw-rf47, PYSEC-2025-194), torch.jit.script memory
# corruption, is now FIXED by torch 2.12.1 (OSV last_affected 2.12.0). The earlier
# `--ignore-vuln CVE-2025-3000` suppression has been DROPPED in favour of the real
# fix — the `torch>=2.12.1` floor above. The audit runs clean with no ignore flags.
#
# Portable invocation (house standard §4): export the committed uv.lock to a
# requirements file and audit THAT — pip-audit's default venv mode audits whatever
# happens to be installed, which drifts from the lock. `--no-deps --disable-pip`
# keeps pip-audit from resolving or installing anything itself.
audit.shell = """
uv export --frozen --all-extras --no-emit-project --no-hashes -o .audit-requirements.txt \
  && pip-audit -r .audit-requirements.txt --disable-pip --no-deps \
  && rm .audit-requirements.txt
"""
test = "pytest --cov=edgereco --cov-report=term-missing --cov-fail-under=90"
fmt = "ruff format ."
# `gate` mirrors CI's quality steps (format-check + lint + typecheck + complexity +
# test-with-coverage). `pip-audit` runs in the separate Security audit workflow.
gate = ["fmt-check", "lint", "typecheck", "complexity", "test"]

# `demo` is the turnkey, backend-free showcase: it brings up the Caddy edge (signed
# bundle on :8081), starts the Vite SPA (:5174), and opens your browser. Reuses the
# same edge + Vite + trap-teardown sequence as frontend/Makefile:dev, plus a deps
# guard and Vite's `--open`. The demo runs entirely in-browser — no FastAPI here.
[tool.poe.tasks.demo]
help = "Turnkey backend-free demo — edge + Vite SPA on free ports, opens your browser."
cwd = "../frontend"            # poe resolves this relative to the project root (backend/)
# Thin wrapper over the single orchestrator (frontend/app/scripts/demo.mjs), which
# allocates random free ports per run and wires them through compose/Vite/CORS/the
# preflight. Kept in sync with poe_tasks.toml's [tasks.demo].
shell = "node app/scripts/demo.mjs"

# Same demo, PLUS the flywheel uplink: interaction events are captured in-tab and
# periodically flushed to a mimicked-cloud collector (the FastAPI /events). Inference
# stays 100% local — the uplink is an optional, off-path beacon.
# Kept in sync with poe_tasks.toml's [tasks.demo-flywheel].
[tool.poe.tasks.demo-flywheel]
help = "Demo + flywheel uplink — events flush to a mimicked cloud collector (free port)."
cwd = "../frontend"
shell = "node app/scripts/demo.mjs --flywheel"

# The CLOUD half of the flywheel: recompute popularity from the collected events
# and republish a freshly signed bundle into the runtime origin. The edge
# revalidates `latest` within 30s, so a browser refresh re-ranks the rail toward
# what you clicked. The collector's randomly-chosen port is read from the
# demo-ports.env the flywheel run wrote. Kept in sync with poe_tasks.toml's
# [tasks.demo-retrain].
[tool.poe.tasks.demo-retrain]
help = "Flywheel retrain — recompute popularity from collected events, republish the signed bundle."
shell = """
set -e
ORIGIN=../frontend/.demo-origin
[ -d "$ORIGIN/manifest" ] || { echo 'No runtime origin yet — run `poe demo-flywheel` first, click around, then retrain.'; exit 1; }
[ -f examples/keys/private.key ] || { echo 'Missing examples/keys/private.key (gitignored). Retrain re-signs the bundle, so the maintainer signing key is required.'; exit 1; }
# The flywheel run records its randomly-chosen collector port here; fall back to 8000.
COLLECTOR_PORT=8000
[ -f "$ORIGIN/demo-ports.env" ] && . "$ORIGIN/demo-ports.env"
echo ">> retrain -> syncing the current bundle, folding in collected engagement, republishing… (collector :$COLLECTOR_PORT)"
uv run edgereco retrain "$ORIGIN" "$ORIGIN" examples/keys/private.key examples/keys/public.key --events-url "http://localhost:${COLLECTOR_PORT}/events/export" --alpha 0.5 --cache-dir .retrain-cache
echo '>> done. Refresh the SPA tab — the rail re-ranks toward what you clicked.'
"""
