[project]
name = "edgereco-api"
version = "0.0.0"
description = "EdgeReco Phase 0 FastAPI service"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "pydantic>=2.9",
  "uvicorn[standard]>=0.32",
  "structlog>=24.4",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "httpx>=0.27",
  "mypy>=1.11",
  "ruff>=0.6",
  "datamodel-code-generator>=0.26",
  "fastapi-code-generator>=0.5",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["."]

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["app/generated"]

[[tool.mypy.overrides]]
module = "app.domain.*"
strict = true
disallow_any_explicit = true
